Add --add-opens JVM args to surefire/failsafe for Java 25 (#1055)
* Add --add-opens JVM args to surefire/failsafe for Java 25

Java 25 enforces module boundaries more strictly, causing tests that use
reflection (Mockito, Spring, Hibernate) to fail without --add-opens args.
Add a new AddSurefireArgLine recipe that merges --add-opens arguments
into the argLine configuration of maven-surefire-plugin and
maven-failsafe-plugin, and wire it into UpgradePluginsForJava25.

The recipe handles plugins with no configuration, existing configuration
without argLine, and existing argLine values (merging without duplicates).

Fixes moderneinc/customer-requests#1821

* Gate --add-opens flags on actual dependencies using ModuleHasDependency

Split the single unconditional AddSurefireArgLine invocation into three
conditional wrapper recipes gated by ModuleHasDependency preconditions:
- AddSurefireArgLineForMockito: Mockito/ByteBuddy flags, gated on mockito-*
- AddSurefireArgLineForSpring: Spring flags, gated on spring-*
- AddSurefireArgLineForNetty: Netty flags, gated on netty-*

This avoids adding unnecessary --add-opens arguments to projects that
don't use those frameworks.

* Remove Spring and Netty --add-opens variants, keep only Mockito

* Update recipes.csv with regenerated recipe counts

* Rename AddSurefireArgLine to AddSurefireFailsafeArgLine, fix copyright years and formatting

- Rename recipe class to better reflect that it covers both surefire and failsafe
- Update copyright year to 2026 in new files
- Fix extra spaces inside parentheses in recipe implementation
- Update all YAML, examples, and CSV references
- Regenerate recipes.csv

---------

Co-authored-by: Steve Elliott <steve@moderne.io>